# Aero-Fighters

./: .gitattributes  .gitignore  Aero-Fighters.sln  Aero-Fighters.vcxproj  Aero-Fighters.vcxproj.filters  CMakeLists.txt  ControllerStuff.hpp  Cutscene.cpp  Cutscene.h  Enemy.cpp  Enemy.h  Game.cpp  Game.h  Level.cpp  Level.h  Main.cpp  Names.txt  Player.cpp  Player.h  Projectile.cpp  Projectile.h  README.md  VisualElement.cpp  VisualElement.h
Animator/: Animator.cpp  Animator.h
Game/: Game.cpp  Game.h
Level/: Level.cpp  Level.h
Object/: Object.cpp  Object.h
Object/Collectable/: Collectable.cpp  Collectable.h
Object/Enemy/: Enemy.cpp  Enemy.h
Object/Player/: Player.cpp  Player.h
Object/Projectile/: Projectile.cpp  Projectile.h
Res/England/: enemies.txt
Res/Meddit/: Meddit loop
Res/Misc/: EXPOSION.psd  Enemy projectiles.psd  Explosion.psd  LAZORZ.psd  Powerups.psd  Read me powerup info.txt  projectile sizes.txt
Res/States/: enemies.txt
Res/Sweden/: enemies.txt
doc/: index.html - Shortcut.lnk
doc/html/: _air_8cpp.html  _air_8cpp__incl.dot  _air_8cpp_source.html  _air_8h.html  _air_8h.js  _air_8h__dep__incl.dot  _air_8h__incl.dot  _air_8h_source.html  _boss_8cpp.html  _boss_8cpp__incl.dot  _boss_8cpp_source.html  _boss_8h.html  _boss_8h.js  _boss_8h__dep__incl.dot  _boss_8h__incl.dot  _boss_8h_source.html  _collectable_8cpp.html  _collectable_8cpp__incl.dot  _collectable_8cpp_source.html  _collectable_8h.html  _collectable_8h.js  _collectable_8h__dep__incl.dot  _collectable_8h__incl.dot  _collectable_8h_source.html  _controller_stuff_8hpp.html  _controller_stuff_8hpp.js  _controller_stuff_8hpp__dep__incl.dot  _controller_stuff_8hpp__incl.dot  _controller_stuff_8hpp_source.html  _enemy_8cpp.html  _enemy_8cpp__incl.dot  _enemy_8cpp_source.html  _enemy_8h.html  _enemy_8h.js  (+475 more)
res/: RmBlueThings_README.md  attacks example.txt  attacks.txt  children.txt  enemies example.txt  new enemies example.txt  old enemies example.txt
src/: ControllerStuff.hpp  Main.cpp
(+664 files in other folders)
